# kalantir-consulting-ai-agent

./: .gitignore  README.md  main.py  pyproject.toml
backend/analysis/: discussion_agent.ipynb  discussion_agent.py
backend/analysis/nodes/: interview_nodes.py  report_nodes.py  routing.py  states.py
backend/analysis/retrieval/: rag.py  web_search.py
backend/data/: data_pipeline_supervisor.py  db_analyze_agent.ipynb  db_analyze_agent.py  external_agent.ipynb  external_analyze_agent.py  internal_agent.ipynb  pdf_vectorizer.py  web_search_agent.py
backend/email/: mail_sender.py  mailing_scheduler.py
backend/prompt/: answer_instructions.yaml  conclusion_instructions.yaml  db_analysis_instructions.yaml  intro_conclusion_instructions.yaml  introduction_instructions.yaml  mcp_brave_global.yaml  mcp_brave_korean.yaml  mcp_exa_research.yaml  mcp_exa_technical.yaml  mcp_perplexity_comparison.yaml  mcp_perplexity_comprehensive.yaml  mcp_web_search_summary.yaml  question_instructions.yaml  report_writer_instructions.yaml  search_instructions.yaml  search_instructions_email.yaml  section_writer_instructions.yaml
backend/scheduler/: config.py  tasks.py
util/: consultants.py  path.py  pdf_maker.py  persona.py
