[project]
name = "kalantir-consulting-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.12",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.35",
    "langchain-tavily>=0.2.12",
    "pdfplumber>=0.11.7",
    "psycopg2>=2.9.11",
    "qdrant-client>=1.15.1",
]
