[project]
name = "kalantir-consulting-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "arxiv>=2.2.0",
    "fastapi>=0.120.3",
    "fitz>=0.0.1.dev2",
    "frontend>=0.0.3",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.12",
    "langchain-huggingface>=0.3.1",
    "langchain-mcp-adapters>=0.1.11",
    "langchain-openai>=0.3.35",
    "langchain-tavily>=0.2.12",
    "langgraph>=1.0.1",
    "markdown>=3.9",
    "markdown2pdf>=0.1.4",
    "pdfplumber>=0.11.7",
    "psycopg2>=2.9.11",
    "qdrant-client>=1.15.1",
    "rank-bm25>=0.2.2",
    "reportlab>=4.4.4",
    "schedule>=1.2.2",
    "scheduler>=0.8.8",
    "sentence-transformers>=5.1.2",
    "typing-extensions>=4.15.0",
    "weasyprint>=66.0",
]
